# uspto

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.dvc/: config
data/raw/: .gitignore  sample_submission.csv.dvc  test.csv.dvc  titles.csv.dvc  train.csv.dvc
scripts/: pre_commit_hooks.cmd
tests/: test_uspto.py
