[tool.poetry]
name = "uspto"
version = "0.1.0"
description = ""
authors = ["exotol <artem.bardakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.11.0"
jupyterlab = "^3.4.3"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
hydra-core = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
